完成了数据报表开发

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "echarts": "^5.1.2",
     "element-ui": "^2.15.3",
     "lodash": "^4.17.21",
     "vue": "^2.6.11",
